2004-06-13  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/Makefile.am (noinst_HEADERS): Added ufs2.h.
	
2004-06-13  Yoshinori K. Okuji  <okuji@enbug.org>

	* configure.ac (AC_INIT): Upgraded to 0.95.

2004-05-23  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/char_io.c (grub_isspace): Use a switch sentense instead
	of an if sentense, because that reduces the size.

	* lib/device.c (read_device_map): Change the max number of DRIVE
	to 127 from 8. This was too strict.

	* stage2/asm.S (stop_floppy): Call pusha and popa outside the
	block of real mode code. Reported by Guillem Jover
	<guillem@debian.org>.

2004-05-20  Damian Ivereigh  <damian@cisco.com>

	* netboot/main.c: Fixed bootp only code so that options
	work properly. This fix is obvious when compared with the
	DHCP code.

2004-05-17  Pavel Roskin  <proski@gnu.org>

	* stage2/char_io.c (safe_parse_maxint): Disable for stage 1.5.
	(grub_tolower): Disable for stage 1.5 except fat_stage1_5.
	(grub_memcmp): Disable for stage 1.5 except iso9660_stage1_5.

2004-05-14  Yoshinori K. Okuji  <okuji@enbug.org>

	From Sergey Matveychuk <sem@ciam.ru>:
	* stage2/size_test: Added a check for ufs2_stage1_5.

	* stage2/shared.h (STAGE2_ID_UFS2_STAGE1_5): New macro.
	[FSYS_UFS2] (STAGE2_ID): Set to STAGE2_ID_UFS2_STAGE1_5.

	* stage2/filesys.h (FSYS_UFS2_NUM): New macro.
	[FSYS_UFS2] (ufs2_mount): New prototype.
	[FSYS_UFS2] (ufs2_read): Likewise.
	[FSYS_UFS2] (ufs2_dir): Likewise.
	[FSYS_UFS2] (ufs2_embed): Likewise.
	(NUM_FSYS): Added FSYS_UFS2_NUM.

	* stage2/disk_io.c (fsys_table): Added an ufs2 entry.

	* stage2/builtins.c (setup_func): Added ufs2 into the
	STAGE1_5_MAP.

	* stage2/Makefile.am (libgrub_a_SOURCES): Added fsys_ufs2.c.
	(libgrub_a_CFLAGS): Added -DFSYS_UFS2=1.
	(pkgdata_DATA): Added ufs2_stage1_5.
	(noinst_PROGRAMS): Added ufs2_stage1_5.exec.
	(ufs2_stage1_5_exec_SOURCES): New variable.
	(ufs2_stage1_5_exec_CFLAGS): Likewise.
	(ufs2_stage1_5_exec_CCASFLAGS): Likewise.